完成留学潜力报告系统重大更新：1. 实现五维能力自动计算（学术、语言、文体、社交、独立生活）2. 优化报告布局，留学意向独立成section 3. 雷达图添加分数标签显示 4. 支持多种英语考试类型分析 5. 改进多选数据处理，支持多个留学地区/专业意向 6. 更新五维能力分析为段落形式，针对出国留学生优化

--- a/index.html
+++ b/index.html
@@ -398,7 +398,13 @@
                         
                         <div class="form-group">
                             <label for="friendsCount">经常来往的好友数量</label>
-                            <input type="text" id="friendsCount" name="friendsCount" placeholder="请输入好友数量">
+                            <select id="friendsCount" name="friendsCount">
+                                <option value="">请选择</option>
+                                <option value="没有">没有</option>
+                                <option value="1-3个">1-3个</option>
+                                <option value="3-5个">3-5个</option>
+                                <option value="5个以上">5个以上</option>
+                            </select>
                         </div>
                         
                         <div class="form-group">
