--- a/report.html
+++ b/report.html
@@ -49,9 +49,24 @@
                         <span class="label">学科分组：</span>
                         <span class="value" id="student-subject-group"></span>
                     </div>
-                    <div class="info-item">
-                        <span class="label">留学意向：</span>
-                        <span class="value" id="student-destination"></span>
+                </div>
+            </section>
+
+            <!-- 留学意向 -->
+            <section class="intention-section">
+                <h2>留学意向</h2>
+                <div class="intention-grid">
+                    <div class="intention-item">
+                        <span class="label">留学区域意向：</span>
+                        <div class="value" id="student-regions">
+                            <!-- 动态内容：显示区域和国旗 -->
+                        </div>
+                    </div>
+                    <div class="intention-item">
+                        <span class="label">专业方向意向：</span>
+                        <div class="value" id="student-majors">
+                            <!-- 动态内容：显示专业和图标 -->
+                        </div>
                     </div>
                 </div>
             </section>
@@ -77,95 +92,40 @@
                 <!-- 学术能力 -->
                 <div class="ability-detail">
                     <h3>📚 学术能力</h3>
-                    <div class="detail-grid">
-                        <div class="detail-item strengths">
-                            <h4>优势</h4>
-                            <p id="academic-strengths"><!-- 动态内容 --></p>
-                        </div>
-                        <div class="detail-item weaknesses">
-                            <h4>不足</h4>
-                            <p id="academic-weaknesses"><!-- 动态内容 --></p>
-                        </div>
-                        <div class="detail-item suggestions">
-                            <h4>建议</h4>
-                            <p id="academic-suggestions"><!-- 动态内容 --></p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- 学术潜力 -->
-                <div class="ability-detail">
-                    <h3>🚀 学术潜力</h3>
-                    <div class="detail-grid">
-                        <div class="detail-item strengths">
-                            <h4>优势</h4>
-                            <p id="potential-strengths"><!-- 动态内容 --></p>
-                        </div>
-                        <div class="detail-item weaknesses">
-                            <h4>不足</h4>
-                            <p id="potential-weaknesses"><!-- 动态内容 --></p>
-                        </div>
-                        <div class="detail-item suggestions">
-                            <h4>建议</h4>
-                            <p id="potential-suggestions"><!-- 动态内容 --></p>
-                        </div>
+                    <div class="ability-content">
+                        <p id="academic-analysis"><!-- 动态内容：合并的优势、不足和建议 --></p>
                     </div>
                 </div>
 
                 <!-- 语言能力 -->
                 <div class="ability-detail">
                     <h3>🌍 语言能力</h3>
-                    <div class="detail-grid">
-                        <div class="detail-item strengths">
-                            <h4>优势</h4>
-                            <p id="language-strengths"><!-- 动态内容 --></p>
-                        </div>
-                        <div class="detail-item weaknesses">
-                            <h4>不足</h4>
-                            <p id="language-weaknesses"><!-- 动态内容 --></p>
-                        </div>
-                        <div class="detail-item suggestions">
-                            <h4>建议</h4>
-                            <p id="language-suggestions"><!-- 动态内容 --></p>
-                        </div>
+                    <div class="ability-content">
+                        <p id="language-analysis"><!-- 动态内容：合并的优势、不足和建议 --></p>
                     </div>
                 </div>
 
-                <!-- 综合素养 -->
+                <!-- 文体素养 -->
                 <div class="ability-detail">
-                    <h3>⭐ 综合素养</h3>
-                    <div class="detail-grid">
-                        <div class="detail-item strengths">
-                            <h4>优势</h4>
-                            <p id="quality-strengths"><!-- 动态内容 --></p>
-                        </div>
-                        <div class="detail-item weaknesses">
-                            <h4>不足</h4>
-                            <p id="quality-weaknesses"><!-- 动态内容 --></p>
-                        </div>
-                        <div class="detail-item suggestions">
-                            <h4>建议</h4>
-                            <p id="quality-suggestions"><!-- 动态内容 --></p>
-                        </div>
+                    <h3>🎨 文体素养</h3>
+                    <div class="ability-content">
+                        <p id="artistic-analysis"><!-- 动态内容：合并的优势、不足和建议 --></p>
                     </div>
                 </div>
 
-                <!-- 目标匹配度 -->
+                <!-- 社交能力 -->
                 <div class="ability-detail">
-                    <h3>🎯 目标匹配度</h3>
-                    <div class="detail-grid">
-                        <div class="detail-item strengths">
-                            <h4>优势</h4>
-                            <p id="matching-strengths"><!-- 动态内容 --></p>
-                        </div>
-                        <div class="detail-item weaknesses">
-                            <h4>不足</h4>
-                            <p id="matching-weaknesses"><!-- 动态内容 --></p>
-                        </div>
-                        <div class="detail-item suggestions">
-                            <h4>建议</h4>
-                            <p id="matching-suggestions"><!-- 动态内容 --></p>
-                        </div>
+                    <h3>🤝 社交能力</h3>
+                    <div class="ability-content">
+                        <p id="social-analysis"><!-- 动态内容：合并的优势、不足和建议 --></p>
+                    </div>
+                </div>
+
+                <!-- 独立生活能力 -->
+                <div class="ability-detail">
+                    <h3>🏠 独立生活能力</h3>
+                    <div class="ability-content">
+                        <p id="living-analysis"><!-- 动态内容：合并的优势、不足和建议 --></p>
                     </div>
                 </div>
             </section>
