--- a/report.html
+++ b/report.html
@@ -170,23 +170,15 @@
             <!-- 服务引流模块 -->
             <section class="service-section">
                 <div class="service-content">
-                    <div class="service-slogan" id="service-slogan">
-                        <!-- 动态内容 -->
-                    </div>
-                    <div class="success-cases">
-                        <h3>成功案例</h3>
-                        <div class="cases-content" id="success-cases">
-                            <!-- 动态内容 -->
+                    <h2 class="service-title" id="service-title">高考成绩锁定海外名校！</h2>
+                    <p class="service-subtitle" id="service-subtitle">联系我们获取更多高考海外升学资讯及个性化解决方案</p>
+                    <div class="contact-info">
+                        <div class="qr-code-container">
+                            <img id="qr-code-image" src="image/default-qr.svg" alt="二维码" class="qr-code">
+                            <p class="contact-email" id="contact-email">contact@example.com</p>
                         </div>
                     </div>
-                </div>
-                <div class="contact-info">
-                    <p>想了解更多？联系我们获取专业咨询</p>
-                    <div class="contact-details">
-                        <span>📞 400-123-4567</span>
-                        <span>📧 info@studyabroad.com</span>
-                        <span>🌐 www.studyabroad.com</span>
-                    </div>
+                    <p class="tech-support" id="tech-support">本报告技术支持由 未名教育 提供</p>
                 </div>
             </section>
         </div>
