重构系统架构：设置home.html为默认主页，添加机构码验证功能
- 设置home.html为默认主页，index.html自动重定向
- 添加机构码输入模态框，要求输入机构码和学生姓名
- 修改survey.html显示机构信息，添加数据验证
- 更新问卷数据收集，包含机构信息和时间戳
- 创建独立的admin.html管理后台页面
- 更新所有页面的导航链接
- 实现完整的用户流程：首页→机构码输入→问卷填写→数据收集

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>留学潜力报告生成系统</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <!-- 添加xlsx库 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script>
+        // 自动重定向到首页
+        window.location.href = 'home.html';
+    </script>
 </head>
 <body>
     <div class="container">
