--- a/report.html
+++ b/report.html
@@ -61,7 +61,7 @@
         <div class="nav-content">
             <a href="home.html" class="nav-link">🏠 首页</a>
             <a href="survey.html" class="nav-link">📋 在线问卷</a>
-            <a href="index.html" class="nav-link">⚙️ 管理后台</a>
+                <a href="admin.html" class="nav-link">⚙️ 管理后台</a>
         </div>
     </nav>
 
