feat: 完善系统功能 - 添加数据库支持、优化UI、更新分析逻辑
- 添加SQLite数据库支持，实现机构码和问卷数据持久化
- 优化问卷管理和机构码管理界面，改为表格形式
- 更新四维能力详细分析生成逻辑，改为单段描述格式
- 修复学术能力自动填充问题
- 添加推荐信息自动填充功能
- 优化用户体验和界面布局

--- a/report.html
+++ b/report.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>留学潜力报告</title>
     <link rel="stylesheet" href="styles/report.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- 使用国内镜像，避免Google Fonts超时 -->
+    <style>
+        @import url('https://fonts.loli.net/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+        /* 后备字体方案 */
+        * {
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', 'Helvetica Neue', Arial, sans-serif !important;
+        }
+    </style>
     <style>
         .report-nav {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
