fix: 修复图片路径问题，将相对路径转换为绝对路径以支持服务器部署

--- a/report.html
+++ b/report.html
@@ -229,7 +229,7 @@
                     <p class="service-subtitle" id="service-subtitle">联系我们获取更多高考海外升学资讯及个性化解决方案</p>
                     <div class="contact-info">
                         <div class="qr-code-container">
-                            <img id="qr-code-image" src="image/default-qr.svg" alt="二维码" class="qr-code">
+                            <img id="qr-code-image" src="/image/default-qr.png" alt="二维码" class="qr-code">
                             <p class="contact-email" id="contact-email">maerzchen@live.com</p>
                         </div>
                     </div>
