添加大学管理功能：支持查看、添加、编辑、删除大学，包括图片上传功能；优化推荐理由文本框大小；修复大学列表ID字段缺失问题

--- a/admin.html
+++ b/admin.html
@@ -31,6 +31,10 @@
                         <span class="btn-icon">🏛️</span>
                         查看校徽列表
                     </a>
+                    <a href="university-management.html" target="_blank" class="btn btn-secondary">
+                        <span class="btn-icon">🎓</span>
+                        大学管理
+                    </a>
                 </div>
             </div>
         </header>
@@ -711,7 +715,7 @@
                             <input type="text" placeholder="专业名称" id="reach1Major" value="工程学">
                             <input type="text" placeholder="地区" id="reach1Location" value="英国">
                             <input type="url" placeholder="校徽URL" id="reach1Logo" value="https://via.placeholder.com/60x60?text=剑桥">
-                            <textarea placeholder="推荐理由（约20字）" id="reach1Reason" rows="2">世界顶尖学府，工程专业排名全球前3，学术声誉卓越</textarea>
+                            <textarea placeholder="推荐理由" id="reach1Reason" rows="4">世界顶尖学府，工程专业排名全球前3，学术声誉卓越</textarea>
                         </div>
                         <div class="university-item">
                             <div class="university-name-row">
@@ -721,7 +725,7 @@
                             <input type="text" placeholder="专业名称" id="reach2Major" value="计算机科学">
                             <input type="text" placeholder="地区" id="reach2Location" value="英国">
                             <input type="url" placeholder="校徽URL" id="reach2Logo" value="https://via.placeholder.com/60x60?text=帝国">
-                            <textarea placeholder="推荐理由（约20字）" id="reach2Reason" rows="2">计算机科学全球领先，就业前景极佳，科研实力雄厚</textarea>
+                            <textarea placeholder="推荐理由" id="reach2Reason" rows="4">计算机科学全球领先，就业前景极佳，科研实力雄厚</textarea>
                         </div>
                     </div>
 
@@ -735,7 +739,7 @@
                             <input type="text" placeholder="专业名称" id="match1Major" value="电子工程">
                             <input type="text" placeholder="地区" id="match1Location" value="英国">
                             <input type="url" placeholder="校徽URL" id="match1Logo" value="https://via.placeholder.com/60x60?text=曼大">
-                            <textarea placeholder="推荐理由（约20字）" id="match1Reason" rows="2">电子工程专业实力强劲，工业界认可度高，就业稳定</textarea>
+                            <textarea placeholder="推荐理由" id="match1Reason" rows="4">电子工程专业实力强劲，工业界认可度高，就业稳定</textarea>
                         </div>
                         <div class="university-item">
                             <div class="university-name-row">
@@ -745,7 +749,7 @@
                             <input type="text" placeholder="专业名称" id="match2Major" value="机械工程">
                             <input type="text" placeholder="地区" id="match2Location" value="英国">
                             <input type="url" placeholder="校徽URL" id="match2Logo" value="https://via.placeholder.com/60x60?text=伯明翰">
-                            <textarea placeholder="推荐理由（约20字）" id="match2Reason" rows="2">机械工程历史悠久，实践教学丰富，毕业生就业率高</textarea>
+                            <textarea placeholder="推荐理由" id="match2Reason" rows="4">机械工程历史悠久，实践教学丰富，毕业生就业率高</textarea>
                         </div>
                     </div>
 
@@ -759,7 +763,7 @@
                             <input type="text" placeholder="专业名称" id="safety1Major" value="土木工程">
                             <input type="text" placeholder="地区" id="safety1Location" value="英国">
                             <input type="url" placeholder="校徽URL" id="safety1Logo" value="https://via.placeholder.com/60x60?text=利兹">
-                            <textarea placeholder="推荐理由（约20字）" id="safety1Reason" rows="2">土木工程专业扎实，课程设置实用，性价比高</textarea>
+                            <textarea placeholder="推荐理由" id="safety1Reason" rows="4">土木工程专业扎实，课程设置实用，性价比高</textarea>
                         </div>
                         <div class="university-item">
                             <div class="university-name-row">
@@ -769,7 +773,7 @@
                             <input type="text" placeholder="专业名称" id="safety2Major" value="材料科学">
                             <input type="text" placeholder="地区" id="safety2Location" value="英国">
                             <input type="url" placeholder="校徽URL" id="safety2Logo" value="https://via.placeholder.com/60x60?text=谢菲">
-                            <textarea placeholder="推荐理由（约20字）" id="safety2Reason" rows="2">材料科学领域知名，研究环境优良，申请门槛适中</textarea>
+                            <textarea placeholder="推荐理由" id="safety2Reason" rows="4">材料科学领域知名，研究环境优良，申请门槛适中</textarea>
                         </div>
                     </div>
                 </div>
