添加院校专业方向选择功能；优化报告页面样式：调整四维能力详细分析和综合提升建议的间距

--- a/admin.html
+++ b/admin.html
@@ -712,6 +712,18 @@
                                 <input type="text" placeholder="大学名称" id="reach1Name" value="剑桥大学">
                                 <button type="button" class="select-university-btn" onclick="openUniversitySelector('reach1')">选择大学</button>
                             </div>
+                            <input type="text" placeholder="英文名称" id="reach1EnglishName" value="University of Cambridge">
+                            <select id="reach1MajorDirection">
+                                <option value="建筑">建筑</option>
+                                <option value="理科">理科</option>
+                                <option value="工科" selected>工科</option>
+                                <option value="商科">商科</option>
+                                <option value="文科">文科</option>
+                                <option value="医护">医护</option>
+                                <option value="音乐">音乐</option>
+                                <option value="美术">美术</option>
+                                <option value="其他">其他</option>
+                            </select>
                             <input type="text" placeholder="专业名称" id="reach1Major" value="工程学">
                             <input type="text" placeholder="地区" id="reach1Location" value="英国">
                             <input type="url" placeholder="校徽URL" id="reach1Logo" value="https://via.placeholder.com/60x60?text=剑桥">
@@ -722,6 +734,18 @@
                                 <input type="text" placeholder="大学名称" id="reach2Name" value="帝国理工学院">
                                 <button type="button" class="select-university-btn" onclick="openUniversitySelector('reach2')">选择大学</button>
                             </div>
+                            <input type="text" placeholder="英文名称" id="reach2EnglishName" value="Imperial College London">
+                            <select id="reach2MajorDirection">
+                                <option value="建筑">建筑</option>
+                                <option value="理科">理科</option>
+                                <option value="工科" selected>工科</option>
+                                <option value="商科">商科</option>
+                                <option value="文科">文科</option>
+                                <option value="医护">医护</option>
+                                <option value="音乐">音乐</option>
+                                <option value="美术">美术</option>
+                                <option value="其他">其他</option>
+                            </select>
                             <input type="text" placeholder="专业名称" id="reach2Major" value="计算机科学">
                             <input type="text" placeholder="地区" id="reach2Location" value="英国">
                             <input type="url" placeholder="校徽URL" id="reach2Logo" value="https://via.placeholder.com/60x60?text=帝国">
@@ -736,6 +760,18 @@
                                 <input type="text" placeholder="大学名称" id="match1Name" value="曼彻斯特大学">
                                 <button type="button" class="select-university-btn" onclick="openUniversitySelector('match1')">选择大学</button>
                             </div>
+                            <input type="text" placeholder="英文名称" id="match1EnglishName" value="The University of Manchester">
+                            <select id="match1MajorDirection">
+                                <option value="建筑">建筑</option>
+                                <option value="理科">理科</option>
+                                <option value="工科" selected>工科</option>
+                                <option value="商科">商科</option>
+                                <option value="文科">文科</option>
+                                <option value="医护">医护</option>
+                                <option value="音乐">音乐</option>
+                                <option value="美术">美术</option>
+                                <option value="其他">其他</option>
+                            </select>
                             <input type="text" placeholder="专业名称" id="match1Major" value="电子工程">
                             <input type="text" placeholder="地区" id="match1Location" value="英国">
                             <input type="url" placeholder="校徽URL" id="match1Logo" value="https://via.placeholder.com/60x60?text=曼大">
@@ -746,6 +782,18 @@
                                 <input type="text" placeholder="大学名称" id="match2Name" value="伯明翰大学">
                                 <button type="button" class="select-university-btn" onclick="openUniversitySelector('match2')">选择大学</button>
                             </div>
+                            <input type="text" placeholder="英文名称" id="match2EnglishName" value="University of Birmingham">
+                            <select id="match2MajorDirection">
+                                <option value="建筑">建筑</option>
+                                <option value="理科">理科</option>
+                                <option value="工科" selected>工科</option>
+                                <option value="商科">商科</option>
+                                <option value="文科">文科</option>
+                                <option value="医护">医护</option>
+                                <option value="音乐">音乐</option>
+                                <option value="美术">美术</option>
+                                <option value="其他">其他</option>
+                            </select>
                             <input type="text" placeholder="专业名称" id="match2Major" value="机械工程">
                             <input type="text" placeholder="地区" id="match2Location" value="英国">
                             <input type="url" placeholder="校徽URL" id="match2Logo" value="https://via.placeholder.com/60x60?text=伯明翰">
@@ -760,6 +808,18 @@
                                 <input type="text" placeholder="大学名称" id="safety1Name" value="利兹大学">
                                 <button type="button" class="select-university-btn" onclick="openUniversitySelector('safety1')">选择大学</button>
                             </div>
+                            <input type="text" placeholder="英文名称" id="safety1EnglishName" value="University of Leeds">
+                            <select id="safety1MajorDirection">
+                                <option value="建筑">建筑</option>
+                                <option value="理科">理科</option>
+                                <option value="工科" selected>工科</option>
+                                <option value="商科">商科</option>
+                                <option value="文科">文科</option>
+                                <option value="医护">医护</option>
+                                <option value="音乐">音乐</option>
+                                <option value="美术">美术</option>
+                                <option value="其他">其他</option>
+                            </select>
                             <input type="text" placeholder="专业名称" id="safety1Major" value="土木工程">
                             <input type="text" placeholder="地区" id="safety1Location" value="英国">
                             <input type="url" placeholder="校徽URL" id="safety1Logo" value="https://via.placeholder.com/60x60?text=利兹">
@@ -770,6 +830,18 @@
                                 <input type="text" placeholder="大学名称" id="safety2Name" value="谢菲尔德大学">
                                 <button type="button" class="select-university-btn" onclick="openUniversitySelector('safety2')">选择大学</button>
                             </div>
+                            <input type="text" placeholder="英文名称" id="safety2EnglishName" value="The University of Sheffield">
+                            <select id="safety2MajorDirection">
+                                <option value="建筑">建筑</option>
+                                <option value="理科" selected>理科</option>
+                                <option value="工科">工科</option>
+                                <option value="商科">商科</option>
+                                <option value="文科">文科</option>
+                                <option value="医护">医护</option>
+                                <option value="音乐">音乐</option>
+                                <option value="美术">美术</option>
+                                <option value="其他">其他</option>
+                            </select>
                             <input type="text" placeholder="专业名称" id="safety2Major" value="材料科学">
                             <input type="text" placeholder="地区" id="safety2Location" value="英国">
                             <input type="url" placeholder="校徽URL" id="safety2Logo" value="https://via.placeholder.com/60x60?text=谢菲">
