添加生成长图功能：支持将整个报告生成为一张长图并自动下载

--- a/report.html
+++ b/report.html
@@ -200,6 +200,7 @@
         <button class="btn btn-primary" onclick="exportToPDF()">导出PDF报告</button>
         <button class="btn btn-primary" onclick="exportToImages()">导出4张图片</button>
         <button class="btn btn-primary" onclick="combineImagesToPDF()">图片合成</button>
+        <button class="btn btn-primary" onclick="exportToLongImage()">生成长图</button>
         <button class="btn btn-secondary" onclick="window.close()">关闭窗口</button>
     </div>
 
