更新感谢页面和管理后台功能
- 删除home.html中的手动录入按钮
- 删除thankyou.html中的管理后台按钮
- 将感谢页面的打勾图标改为二维码图片
- 添加感谢页二维码提示文字
- 在管理后台添加感谢页二维码配置功能

--- a/admin.html
+++ b/admin.html
@@ -861,9 +861,14 @@
                         <input type="text" id="serviceSubtitle" name="serviceSubtitle" placeholder="请输入副标题..." value="联系我们获取更多高考海外升学资讯及个性化解决方案">
                     </div>
                     <div class="form-group">
-                        <label for="qrCodeImage">二维码图片</label>
+                        <label for="qrCodeImage">报告页二维码图片</label>
                         <input type="url" id="qrCodeImage" name="qrCodeImage" placeholder="请输入二维码图片URL（留空使用默认图片）..." value="">
                         <small class="form-help">留空将使用默认二维码图片</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="thankyouQrCode">感谢页二维码图片</label>
+                        <input type="url" id="thankyouQrCode" name="thankyouQrCode" placeholder="请输入二维码图片URL（留空使用默认图片）..." value="">
+                        <small class="form-help">留空将使用默认二维码图片（image/default-qr.png）</small>
                     </div>
                     <div class="form-group">
                         <label for="contactEmail">联系邮箱</label>
