--- a/home.html
+++ b/home.html
@@ -346,7 +346,6 @@
                     </p>
                     <div class="feature-actions">
                         <button onclick="showInstitutionModal()" class="btn-homepage btn-primary-homepage">开始问卷</button>
-                        <a href="admin.html#input-tab" class="btn-homepage btn-secondary-homepage">手动录入</a>
                     </div>
                 </div>
             </div>
@@ -370,7 +369,7 @@
             
             <div class="footer-info">
                 <p>© 2024 海外升学潜力评估系统 - 专业留学规划工具</p>
-                <p>技术支持：未名教育 | 数据来源：未名海外升学研究院</p>
+                <p>技术支持：南方未名 | 数据来源：未名海外升学研究院</p>
             </div>
         </div>
     </div>
