添加问卷图标favicon
- 创建favicon.svg文件（问卷剪贴板图标）
- 在所有HTML页面中添加favicon引用
- 图标使用网站主题色（紫色渐变）

--- a/survey.html
+++ b/survey.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>留学潜力评估问卷</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="stylesheet" href="styles/main.css">
     <!-- 使用国内镜像，避免Google Fonts超时 -->
     <style>
